integration-tests/src/test-cases/parse-error-num-letter/expected
parse error: from "test-cases/parse-error-num-letter/input", line 1:
| 7x
|  ^
|
+-> Syntax error: unexpected 'x' in numeric literal

